2017-02-20  Alexey Proskuryakov  <ap@apple.com>

        Clean up how WebKit exports _WebCreateFragment
        https://bugs.webkit.org/show_bug.cgi?id=168579

        Reviewed by Dan Bernstein.

        * WebKit.xcodeproj/project.pbxproj: Added WebCreateFragmentInternal.h.

2017-02-15  Brady Eidson  <beidson@apple.com>

        Stop backing up localStorage databases to iCloud by default.
        <rdar://problem/29045531> and https://bugs.webkit.org/show_bug.cgi?id=168388

        Reviewed by Geoffrey Garen.

        * WebKit.xcodeproj/project.pbxproj:

2017-02-15  Aakash Jain  <aakash_jain@apple.com>

        revert DOMTextEvent.h and DOMHTMLCanvasElement.h to private header
        https://bugs.webkit.org/show_bug.cgi?id=168393

        Reviewed by Dan Bernstein.
        
        Reverting a seemingly accidental change from r204717.

        * WebKit.xcodeproj/project.pbxproj:

2017-02-09  Alex Christensen  <achristensen@webkit.org>

        Fix CMake build.

        * PlatformMac.cmake:

2017-02-07  Alexey Proskuryakov  <ap@apple.com>

        Don't migrate WebKit DOM headers in MigrateHeaders.make
        https://bugs.webkit.org/show_bug.cgi?id=167608

        Reviewed by Darin Adler.

        Stop migrating DOM headers that are now in WebKit.

        * WebKit.xcodeproj/project.pbxproj: Marked DOM headers as private, so that Xcode
        takes care of making them available as SPI.

2017-02-02  Yongjun Zhang  <yongjun_zhang@apple.com>

        In iOS, we should take background assertion when accessing localstorage databases.
        https://bugs.webkit.org/show_bug.cgi?id=165478

        Reviewed by Brady Eidson.

        * WebKit.xcodeproj/project.pbxproj: Moved WebSQLiteDatabaseTrackerClient to WebCore.

2017-01-17  Antti Koivisto  <antti@apple.com>

        Persist derived data
        https://bugs.webkit.org/show_bug.cgi?id=167136

        Reviewed by Andreas Kling.

        * WebCoreSupport/WebResourceLoadScheduler.h:
