@@ -1,3 +1,13 @@
+2017-02-20  Alexey Proskuryakov  <ap@apple.com>
+
+        List of WebCore symbols to re-export from WebKitLegacy should be built automatically
+        https://bugs.webkit.org/show_bug.cgi?id=168342
+        rdar://problem/26182266
+
+        Reviewed by Tim Horton.
+
+        * WebKit.iOS.exp: Removed manually added symbols.
+
 2017-02-20  Aakash Jain  <aakash_jain@apple.com>
 
         Stop exporting WebPluginController from WebKit
