@@ -1,5 +1,17 @@
 2017-02-20  Alexey Proskuryakov  <ap@apple.com>
 
+        List of WebCore symbols to re-export from WebKitLegacy should be built automatically
+        https://bugs.webkit.org/show_bug.cgi?id=168342
+        rdar://problem/26182266
+
+        Reviewed by Tim Horton.
+
+        * WebKit.xcodeproj/project.pbxproj: Append ReexportedWebCoreSymbols_${CURRENT_ARCH}.exp
+        to WebKitLegacy.generated.exp if it exists. Added it to build phase inputs for
+        dependency tracking.
+
+2017-02-20  Alexey Proskuryakov  <ap@apple.com>
+
         Clean up how WebKit exports _WebCreateFragment
         https://bugs.webkit.org/show_bug.cgi?id=168579
 
